# Stagnum

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  contributing.md  docker-compose-deploy.yml  docker-compose.yml  example.env  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  (+1 more)
client/: .env  .eslintrc.json  .gitignore  .prettierrc.json  Dockerfile  README.md  entrypoint.sh  example.env  index.html  jest.config.ts  next.config.mjs  nginx.conf  package-lock.json  package.json  setup-vitest.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
clientRewrite/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  eslint.config.cjs  index.html  package.json  setup-vitest.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
infra/: main.tf  output.tf  terraform.tf  variables.tf
poc/: main.py  requirements.txt
poc-client/: package-lock.json  package.json
server/: .coverage  Dockerfile  README.md  alembic.ini  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  test_requirements.txt
server/src/: config.json  datetime_wrapper_raw.py  logging_config.py  main.py
server/src/alembic/: env.py
server/src/alembic/versions/: 149e2197ecff_add_data_required_for_login_and_auth_.py  1dc141893e67_add_support_for_promoting_tracks.py  22d3b92264b6_add_playback_history_support_to_database.py  25c34e5bf930_data_changes_required_for_pool_.py  27048d682757_make_user_icon_url_nullable.py  2906819be645_change_spotify_email_to_id_in_model.py  3b8805c4d7db_fixing_incorrect_foreign_keys.py  40995fba9cba_extract_pool_member_randomization_.py  4fc5f9bc5558_double_avatar_url_length.py  62ec829ee3f3_caching_current_song_playback_data_in_.py  6b917dddd71e_add_model_for_pool_members.py  70e02357c5ff_big_changes_for_support_for_pool_.py  7851701cd257_add_playback_status_entity.py  a2d83a505517_added_user_table_base.py  a864a5084871_new_field_for_user_session_for_storing_.py  aeb0c7f142d6_increase_field_sizes_for_pool_members.py  af9978211950_add_user_table.py  d2a36ff0d00d_delete_faulty_table.py  d82e52785ee3_data_changes_required_for_pool_.py  e5382c8b5f3e_re_add_history_table_with_correct_.py
server/src/api/: application.py  routes.py
server/src/api/auth/: __init__.py  dependencies.py  models.py  routes.py  scheduler.py  spotify_models.py  tasks.py
server/src/api/common/: __init__.py  dependencies.py  helpers.py  models.py  spotify_models.py
server/src/api/health/: __init__.py  dependencies.py  models.py  routes.py
server/src/api/pool/: __init__.py  dependencies.py  exceptions.py  helpers.py  models.py  randomization_algorithms.py  routes.py  spotify_models.py  tasks.py  websocket.py
server/src/api/search/: __init__.py  dependencies.py  dependency.py  models.py  routes.py  spotify_models.py
server/src/database/: database_connection.py  entities.py
server/test/: auth_features.py  conftest.py  framework_features.py  healthcheck_features.py
server/test/auth_features/: auth_login_callback_features.py  auth_login_features.py  cleanup_state_strings_features.py  conftest.py  refresh_token_features.py
server/test/helpers/: classes.py
server/test/pool_features/: add_content_features.py  add_song_features.py  conftest.py  create_pool_features.py  delete_content_features.py  delete_leave_pool_features.py  delete_song_features.py  get_pool_features.py  playback_features.py  playback_websocket_features.py  pool_websocket_features.py  promote_track_features.py  refresh_token_features.py  shared_pool_features.py  websocket_features.py  weighted_randomization_features.py
server/test/search_features/: album_search_features.py  artist_search_features.py  conftest.py  general_search_features.py  playlist_search_features.py  playlist_search_results.py  resource_search_features.py  track_search_features.py
server/test/test_types/: callables.py  faker.py  typed_dictionaries.py
server/test/types/: aliases.py  callables.py  typed_dictionaries.py
(+506 files in other folders)
